# Acher

./: .env.example  .gitignore  LICENSE  README.md  config.json  install.sh  pyproject.toml
.claude/: settings.local.json
backend/acher/: __init__.py  activity.py  api.py  capture.py  cli.py  config.py  daemon.py  db.py  drive.py  export.py  hotkey.py  queries.py  retention.py  uploader.py
backend/acher/platform/: __init__.py  base.py  mac.py  windows.py
backend/tests/: test_activity.py  test_api.py  test_autostart.py  test_capture_manual.py  test_config_api.py  test_hotkey.py  test_queries.py  test_retention.py  test_search.py  test_timesheet.py  test_uploader.py
docs/: PROJECT_STATUS.md  drive-setup.md  permissions-setup.md  research.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: MiniScrubber.tsx  ScreenshotCard.tsx  ScreenshotModal.tsx  ScreenshotPopup.tsx  SearchPanel.tsx  StatsBar.tsx  TimelineRow.tsx
frontend/src/lib/: api.ts  colors.ts  format.ts  timeline.ts
frontend/src/pages/: DayView.tsx  Settings.tsx  Statistics.tsx  Timeline.tsx  TimesheetPage.tsx
